@@ -25,3 +25,11 @@
 2012-06-19  Cedric Bail
 
 	* Sync rendering with Ecore_Animator.
+
+2012-06-05  Sohyun Kim
+
+	* Add fimcconvert element to resize and convert color using fimc on device.
+
+2012-08-01  Cedric Bail
+
+	* Fix race condition in gstreamer render function.
